test/syc/bad/uniondredef.c
/*
 * Redefinition of 'union foo' as a different kind of tag
 */

union foo {
	int x;
	int y;
} f;

struct foo;
